--- a/app/index.html
+++ b/app/index.html
@@ -25,8 +25,8 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div ng-include="views/layout/shell.html"></div>
-    <!--<div class="container" ng-view=""></div>-->
+    <div ng-include="'views/layout/shell.html'"></div>
+
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
      <script>
