--- a/app/index.html
+++ b/app/index.html
@@ -25,7 +25,21 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div ng-include="'views/layout/shell.html'"></div>
+
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <ul class="nav navbar-nav">
+                <li class="active"><a ng-href="#">Home</a></li>
+                <li><a ng-href="#/about">About</a></li>
+                <li><a ng-href="#">Contact</a></li>
+            </ul>
+            <a class="navbar-brand pull-right" href="#">Smores</a>
+        </div>
+    </div>
+
+    <div class="container" bkgrd-color ng-view></div>
+
+
 
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
@@ -58,7 +72,9 @@
 
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
+
         <script src="scripts/controllers/main.js"></script>
+        <script src="scripts/bkgrd-colors.js"></script>
         <!-- endbuild -->
 </body>
 </html>
