working directive with ng-view

--- a/app/index.html
+++ b/app/index.html
@@ -25,8 +25,8 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-
-    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <p>I'm a paragraph element</p>
+    <div class="navbar navbar-inverse navbar-fixed-top" role="navigation" bg-color>
         <div class="container">
             <ul class="nav navbar-nav">
                 <li class="active"><a ng-href="#">Home</a></li>
@@ -37,7 +37,7 @@
         </div>
     </div>
 
-    <div class="container" bkgrd-color ng-view></div>
+    <div class="container" ng-view></div>
 
 
 
