--- a/index.html
+++ b/index.html
@@ -27,12 +27,25 @@
     <!-- Add your site or application content here -->
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation" bg-color>
         <div class="container">
-            <ul class="nav navbar-nav">
-                <li class="active"><a ng-href="#">Home</a></li>
-                <li><a ng-href="#/about">About</a></li>
-                <li><a ng-href="#">Contact</a></li>
-            </ul>
-            <a class="navbar-brand pull-right" href="#">Smores</a>
+            <div class="navbar-header">
+                <div class="navbar-toggle pull-left" data-toggle="collapse" data-target="#navbar-collapse">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </div>
+                <a class="navbar-brand pull-right" href="#">Smores</a>
+            </div>
+
+            <div class="collapse navbar-collapse" id="navbar-collapse">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a ng-href="#">Home</a></li>
+                    <li><a ng-href="#/about">About</a></li>
+                    <li><a ng-href="#">Contact</a></li>
+                </ul>
+
+            </div>
+
         </div>
     </div>
 
