--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation" bg-color>
         <div class="container">
             <div class="navbar-header">
-                <div class="navbar-toggle pull-left" data-toggle="collapse" data-target="#navbar-collapse">
+                <div type="button" class="navbar-toggle pull-left" data-toggle="collapse" data-target="#navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
@@ -39,9 +39,9 @@
 
             <div class="collapse navbar-collapse" id="navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li class="active"><a ng-href="#">Home</a></li>
-                    <li><a ng-href="#/about">About</a></li>
-                    <li><a ng-href="#">Contact</a></li>
+                    <li class="nav active"><a ng-href="#">Home</a></li>
+                    <li class="nav"><a ng-href="#/about">About</a></li>
+                    <li class="nav"><a ng-href="#">Contact</a></li>
                 </ul>
 
             </div>
