--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation" bg-color>
         <div class="container">
             <div class="navbar-header">
-                <div type="button" class="navbar-toggle pull-left" data-toggle="collapse" data-target="#navbar-collapse">
+                <button type="button" class="navbar-toggle pull-left" data-toggle="collapse" data-target="#navbar-collapse">
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                </div>
+                </button>
                 <a class="navbar-brand pull-right" href="#">Smores</a>
             </div>
 
