--- a/app/index.html
+++ b/app/index.html
@@ -13,6 +13,7 @@
     <!-- build:css styles/vendor.css -->
     <!-- bower:css -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="bower_components/angular-snap/angular-snap.css" />
     <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,app}) styles/main.css -->
@@ -25,20 +26,35 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <p>I'm a paragraph element</p>
+
+    <snap-drawer snap-toggle>
+        <div ng-include="'views/layout/navlinks.html'"></div>
+    </snap-drawer>
+
+    <div snap-content>
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation" bg-color>
         <div class="container">
-            <ul class="nav navbar-nav">
-                <li class="active"><a ng-href="#">Home</a></li>
-                <li><a ng-href="#/about">About</a></li>
-                <li><a ng-href="#">Contact</a></li>
-            </ul>
-            <a class="navbar-brand pull-right" href="#">Smores</a>
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle pull-left" data-target="#navbar-collapse" snap-toggle>
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand pull-right" href="#">Smores</a>
+            </div>
+
+            <div class="collapse navbar-collapse" id="navbar-collapse">
+                <div ng-include="'views/layout/navlinks.html'"></div>
+
+            </div>
+
         </div>
     </div>
 
-    <div class="container" ng-view></div>
 
+        <div class="container" id="content" ng-view></div>
+    </div>
 
 
 
@@ -67,6 +83,8 @@
     <script src="bower_components/angular-cookies/angular-cookies.js"></script>
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-route/angular-route.js"></script>
+    <script src="bower_components/snapjs/snap.js"></script>
+    <script src="bower_components/angular-snap/angular-snap.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
