--- a/app/index.html
+++ b/app/index.html
@@ -35,12 +35,12 @@
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation" bg-color>
         <div class="container">
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle pull-left" data-target="#navbar-collapse" snap-toggle>
+                <a class="navbar-toggle pull-left" data-target="#navbar-collapse" snap-toggle>
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
-                </button>
+                </a>
                 <a class="navbar-brand pull-right" href="#">Smores</a>
             </div>
 
@@ -76,6 +76,7 @@
 
     <!-- build:js scripts/vendor.js -->
     <!-- bower:js -->
+    <script src="bower_components/modernizr/modernizr.js"></script>
     <script src="bower_components/jquery/jquery.js"></script>
     <script src="bower_components/angular/angular.js"></script>
     <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
@@ -85,6 +86,7 @@
     <script src="bower_components/angular-route/angular-route.js"></script>
     <script src="bower_components/snapjs/snap.js"></script>
     <script src="bower_components/angular-snap/angular-snap.js"></script>
+    <script src="bower_components/fastclick/lib/fastclick.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
 
